# bilibili-opinion-insights

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
assets/app-icon/macos/: app.icns
assets/app-icon/windows/: app.rc
src/: cli.rs  lib.rs  main.rs
src/app/: collection.rs  comments.rs  danmaku.rs  events.rs  jsonl.rs  mod.rs  output_records.rs
src/bili/: auth.rs  client.rs  comment.rs  danmaku.rs  mod.rs  video.rs  wbi.rs
src/gui/: gpui_app.rs  materials.rs  messages.rs  mod.rs  motion.rs  theme.rs
src/gui/components/: jelly_button.rs  jelly_event_row.rs  jelly_progress.rs  jelly_switch.rs  jelly_task_lane.rs
src/gui/jelly/: atlas.rs
src/gui/rendering/: gpui_layers.rs  jelly_bitmap.rs  jelly_button_bitmap.rs  jelly_capsule_bitmap.rs  jelly_geometry.rs  jelly_image_cache.rs  jelly_surface_bitmap.rs  jelly_switch_bitmap.rs  mod.rs
src/gui/state/: auth.rs  events.rs  mod.rs  results.rs  task.rs  visual.rs
src/gui/views/: auth_gate.rs  mod.rs  primitives.rs  workbench_widgets.rs
src/gui/workers/: auth_worker.rs  collection_worker.rs  mod.rs
tools/: gui-perf-smoke.ps1  gui-smoke.ps1
tools/jelly-bake/: Cargo.toml
tools/jelly-bake/src/: jelly.wgsl  main.rs
