[package]
name = "bili-opinion"
version = "0.1.0"
edition = "2024"
description = "Collect Bilibili video comments for opinion analysis."
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "gzip", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
